# semverer

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  PRINCIPLES.md  README.md  pyproject.toml
.claude/skills/semverer/: SKILL.md
.github/workflows/: ci.yml  publish.yml
features/: api_extraction.feature  baseline_storage.feature  claude_skill.feature  cli.feature  cross_python.feature  file_tracking.feature  history_audit.feature  robustness.feature  version_bumping.feature
src/semverer/: __init__.py  audit.py  cli.py  comparator.py  discovery.py  extractor.py  files.py  main.py  metadata.py  models.py  skill.py  storage.py  versioning.py
src/semverer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/step_defs/: conftest.py  test_api_extraction.py  test_baseline_storage.py  test_claude_skill.py  test_cli.py  test_cross_python.py  test_file_tracking.py  test_history_audit.py  test_robustness.py  test_version_bumping.py
tests/unit/: test_audit.py  test_comparator.py  test_extractor.py  test_files.py  test_metadata.py  test_multipackage.py  test_versioning.py
