[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semverer"
version = "0.4.0"
description = "Automatic semver bumps for Python packages, driven by AST-level public API change detection"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bub Taylor", email = "bubthegreat@gmail.com" }]
requires-python = ">=3.12"
keywords = ["semver", "versioning", "ast", "pre-commit", "release-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "packaging>=23.0",
    "tomlkit>=0.13.2",
    "typer>=0.15.1",
]

[project.urls]
Homepage = "https://github.com/bubthegreat/semverer"
Issues = "https://github.com/bubthegreat/semverer/issues"

[project.scripts]
semverer = "semverer.cli:app"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=8.3",
    "pytest-bdd>=8.1",
    "pytest-cov>=6.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.semverer]
package = "src/semverer"

[tool.semverer.baseline]
version = "0.4.0"

[tool.semverer.baseline.metadata]
name = "semverer"
requires-python = ">=3.12"
dependencies = ["packaging>=23.0", "tomlkit>=0.13.2", "typer>=0.15.1"]
optional-dependencies = []
scripts = ["scripts::semverer = semverer.cli:app"]

[tool.semverer.baseline.files]
".claude/skills/semverer/SKILL.md" = "sha256:167681fe84ac406e466b41d43265aa4e37cd5e3ecb2b1c585393377f332b5bfd"
".github/workflows/ci.yml" = "sha256:9936cf51be42756f93e3df2da928503149b34df59a0b3245ebb9e2d3acff307a"
".github/workflows/publish.yml" = "sha256:3720d0fffbba39c703332f169a897e20b3d68359ecd9482255d1f6fa23773b87"
".gitignore" = "sha256:b9f0bf5efa1cf2d6783372b1f4485b61820bc2419ca6926883ee8386536b937b"
".pre-commit-config.yaml" = "sha256:f942d07fabf77cd82def3942aedefe86ac4228361b8deaf1230d085f5cfa8102"
".pre-commit-hooks.yaml" = "sha256:4ce22c5aa1d8c6863d6051ef72e4104e81bf830fe3ce68729390efdee5f0b48c"
".python-version" = "sha256:a876e0b10411037a012498b9fe18d9bc1df32ed8b722a13564dc944ddcfd9135"
LICENSE = "sha256:09cb13b6731ae7d7aea4973e54e124187fcd9879e1bdc6da782a9aa2e1134ec8"
"PRINCIPLES.md" = "sha256:28ad58444c2065c16f8677c382bf5f4e81ea35389c987dab2d16791730c4e371"
"README.md" = "sha256:5e7d162ac23284c7b068127117f11aebe98596947d44ad9ae3013de6c3845f43"
"features/api_extraction.feature" = "sha256:c7a3b710676e31e40962e7409da6012ff7ccd1bc3239beee4a83762e680e10f8"
"features/baseline_storage.feature" = "sha256:2edcab1aac325eeeee6b68e54d5bafba6640ed83fc254fc9ba9cb3f398c2713b"
"features/claude_skill.feature" = "sha256:612c47465b5e0e9aa1f62f3a77f524d5494f7c3ec8574576dbe97ea139806dd9"
"features/cli.feature" = "sha256:47d5a231dbb2c0ddc3063832ca0f51a1c027928eb6e5a1c13671ffe5bb11c6f2"
"features/file_tracking.feature" = "sha256:652c9ee74cbaec72f195fd933f8718221aa5cc72975125f977fb657b350f9930"
"features/history_audit.feature" = "sha256:5643ab79e7b26e33726d13f79a6818a724a4294a191c5e37857001e4bc17d937"
"features/robustness.feature" = "sha256:379f57be1f76448f780d59cf60997465e8cd9ec14318daaf9b10ee2b29c4b132"
"features/version_bumping.feature" = "sha256:d914103fbc74b1ba9472b574b7f8993204a83bf2596a73ab641652c6bc486c52"
"src/semverer/__init__.py" = "sha256:e9a943413adb3b5ec35f0fe43a947fb29f71deb4868ac33cc92e3fb416f5505d"
"src/semverer/audit.py" = "sha256:71896932b409b175d7b96abcfc3a44b18d636ed71952715fd7484fca7fc01671"
"src/semverer/cli.py" = "sha256:5ce5a53196b28a4979db4cc392fe9eb65c0b506249ecc2a12a476ed567f78360"
"src/semverer/comparator.py" = "sha256:4dce41c99a50a388543fe4efcc87467a8dc09d7bcab73a8a57decab639c21903"
"src/semverer/discovery.py" = "sha256:ede00b8c049ce2d54d5b65c9a8387d441da104d44b8f92b8f834a21c73352a34"
"src/semverer/extractor.py" = "sha256:1aaaa6d5749d06815c9eba37897a9c2da45b2d448c0a353b1597f4141da44d21"
"src/semverer/files.py" = "sha256:bba6270f9a457a34be702ac7dae6a785a8e99b8a3d3d221888d7152df7c4c434"
"src/semverer/metadata.py" = "sha256:fb72d445bb55dc54378b2dd19b2513731330edb1dd99daf74a9f5f0b8f4f6bfa"
"src/semverer/models.py" = "sha256:3f7fd4d5bb4bfae634d2bcd1516dc05dca8e147c9cbc2764281953a22b4e86cc"
"src/semverer/skill.py" = "sha256:234627681c930e3424d916d14d57f4138547c2968a5287b7fae3c48fb4233425"
"src/semverer/storage.py" = "sha256:462d61604aa333bf08dbae99fda6a2332d25b5dd015b6f8d48577b63385d0445"
"src/semverer/versioning.py" = "sha256:c2e23d61bda668bfc5d4a7281e97f0fb70d813d8914e2feddd7b7695837645c2"
"tests/__init__.py" = "sha256:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
"tests/conftest.py" = "sha256:8238fb4dc4e4b1ecbda630315744d355ebc9f6a07b38edaf4fe2cda469e7b436"
"tests/step_defs/__init__.py" = "sha256:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
"tests/step_defs/conftest.py" = "sha256:63a7b8aec1eafbe264e49c6019a7dbb65a1041ed7d44ea62aa67877212d27721"
"tests/step_defs/test_api_extraction.py" = "sha256:2962fd3df94746445139a2fe9a2402a4b4c057ad067febc0b1d2ae98f3064769"
"tests/step_defs/test_baseline_storage.py" = "sha256:802341b3db9223e824cc84841d7e41f44332049d951332f0fc42bfe815618399"
"tests/step_defs/test_claude_skill.py" = "sha256:ebdf975b65d5568cabcab4c3c4ccec15143332a0e5779a93c2f67a50e15b2460"
"tests/step_defs/test_cli.py" = "sha256:fe759701a6a931b872ba91e6b6b471b6fa0ae033dcb0bdc8669d8c2b6b7c482f"
"tests/step_defs/test_file_tracking.py" = "sha256:22ae12fbb77952cc3be81196322c9deb2803a7dac47f17c87c1d68e3c98fdad6"
"tests/step_defs/test_history_audit.py" = "sha256:0c74c257a50c8fad8a63d7e16e94b121e58d0e6f48d1080736d64a0afce5e368"
"tests/step_defs/test_robustness.py" = "sha256:88b3621035af440658784a283defc8c03d6df5d0cd66575b17a38c139b212d57"
"tests/step_defs/test_version_bumping.py" = "sha256:bdda9c4410b6983a602772eafd4e407dfa478e16518886a8f032222d0f426fab"
"tests/unit/__init__.py" = "sha256:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
"tests/unit/test_audit.py" = "sha256:fa32a21c8a7e229720c259f25033c0e5ca2bba13a71191d53000afefaf90bf9f"
"tests/unit/test_comparator.py" = "sha256:12588e91d78aeb20ec55bb4d82f26d47899d9e5686f560ef4ab52e729c1c0fc6"
"tests/unit/test_extractor.py" = "sha256:11bf2244a37d12b500d86762210b8b8e2ec220649b943e6b64d6eabbe46ab395"
"tests/unit/test_files.py" = "sha256:f4c82d3ca024f9f0d74f674bdc41942e80a92d6c35f7b0faccd8d8e5aba78023"
"tests/unit/test_metadata.py" = "sha256:ac60b3ea050aae93d7e3ff3ef59d9ffd841c775d337b3badf58529690116f4fb"
"tests/unit/test_multipackage.py" = "sha256:709883b1321cf6e25de21fcac15e4894edded19653b84e93fee493ecc01b825b"
"tests/unit/test_versioning.py" = "sha256:e9c5ecc286ff72f6a20cdf4041aedea4af5637daaab23bbb88004376c4c3d5b6"

[tool.semverer.baseline.api]
"semverer/audit.py::AuditError" = "class AuditError(Exception)"
"semverer/audit.py::Member" = "class Member"
"semverer/audit.py::Snapshot" = "class Snapshot"
"semverer/audit.py::TransitionReport" = "class TransitionReport"
"semverer/audit.py::audit_repository" = "def audit_repository(start, since=..., tags_only=...)"
"semverer/cli.py::audit" = "def audit(since=..., tags_only=...)"
"semverer/cli.py::check" = "def check(package_path=..., pyproject=..., member=...)"
"semverer/cli.py::init" = "def init(package_path=..., pyproject=..., member=...)"
"semverer/cli.py::skill_install" = "def skill_install(project=..., user=...)"
"semverer/cli.py::update" = "def update(package_path=..., pyproject=..., member=...)"
"semverer/comparator.py::classify_signature_change" = "def classify_signature_change(old, new)"
"semverer/comparator.py::compare" = "def compare(old_api, new_api, old_files, new_files)"
"semverer/discovery.py::DiscoveryError" = "class DiscoveryError(Exception)"
"semverer/discovery.py::Target" = "class Target"
"semverer/discovery.py::discover" = "def discover(root, *, pyproject_option=..., package_path=...)"
"semverer/extractor.py::DuplicateModuleError" = "class DuplicateModuleError(Exception)"
"semverer/extractor.py::DuplicateModuleError.__init__" = "def __init__(self, key, first, second)"
"semverer/extractor.py::extract_module_api" = "def extract_module_api(tree)"
"semverer/extractor.py::extract_package" = "def extract_package(package_path)"
"semverer/extractor.py::extract_packages" = "def extract_packages(package_paths)"
"semverer/extractor.py::extract_sources" = "def extract_sources(sources)"
"semverer/extractor.py::function_sig" = "def function_sig(node)"
"semverer/extractor.py::is_public" = "def is_public(name)"
"semverer/extractor.py::parse_signature" = "def parse_signature(text)"
"semverer/extractor.py::render_class" = "def render_class(node)"
"semverer/extractor.py::render_function" = "def render_function(node)"
"semverer/files.py::hash_files" = "def hash_files(root, scopes=..., exclude=...)"
"semverer/files.py::is_ignored" = "def is_ignored(parts)"
"semverer/metadata.py::ProjectMetadata" = "class ProjectMetadata"
"semverer/metadata.py::compare_metadata" = "def compare_metadata(old, new)"
"semverer/metadata.py::read_metadata" = "def read_metadata(doc)"
"semverer/models.py::Change" = "class Change"
"semverer/models.py::Change.module" = "def module(self)"
"semverer/models.py::ClassSig" = "class ClassSig"
"semverer/models.py::FunctionSig" = "class FunctionSig"
"semverer/models.py::FunctionSig.has_kwarg" = "def has_kwarg(self)"
"semverer/models.py::FunctionSig.has_vararg" = "def has_vararg(self)"
"semverer/models.py::Param" = "class Param"
"semverer/models.py::ParamKind" = "class ParamKind(enum.Enum)"
"semverer/models.py::Severity" = "class Severity(enum.IntEnum)"
"semverer/skill.py::install" = "def install(base_dir)"
"semverer/storage.py::Baseline" = "class Baseline"
"semverer/storage.py::ConfigError" = "class ConfigError(Exception)"
"semverer/storage.py::find_pyproject" = "def find_pyproject(start)"
"semverer/storage.py::load" = "def load(pyproject)"
"semverer/storage.py::read_baseline" = "def read_baseline(doc)"
"semverer/storage.py::read_exclude" = "def read_exclude(doc)"
"semverer/storage.py::read_members_config" = "def read_members_config(doc)"
"semverer/storage.py::read_name_config" = "def read_name_config(doc)"
"semverer/storage.py::read_package_config" = "def read_package_config(doc)"
"semverer/storage.py::read_packages_config" = "def read_packages_config(doc)"
"semverer/storage.py::read_project_name" = "def read_project_name(doc)"
"semverer/storage.py::read_tag_pattern" = "def read_tag_pattern(doc)"
"semverer/storage.py::read_track_files" = "def read_track_files(doc)"
"semverer/storage.py::read_version" = "def read_version(doc)"
"semverer/storage.py::write_state" = "def write_state(pyproject, doc, version, baseline)"
"semverer/versioning.py::bump" = "def bump(version, severity)"
"semverer/versioning.py::canonical" = "def canonical(version)"
"semverer/versioning.py::manual_bump_severity" = "def manual_bump_severity(baseline_version, current_version)"
"semverer/versioning.py::next_version" = "def next_version(baseline_version, current_version, required)"
"semverer/versioning.py::parse_semver" = "def parse_semver(version)"
"semverer/versioning.py::relaxed_required" = "def relaxed_required(version, required)"
[tool.ruff.lint.per-file-ignores]
"src/semverer/cli.py" = ["B008"]
